--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ h2 {
 	color: #121d1f;
 	font-weight: 400;
 	margin-bottom: 30px;
+	font-family: 'Anonymous Pro', monospace;
 	font-size: 34px;
 }
 h3, h4 {
