--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,9 @@ hr {
 	top: 0;
 	width: 100%
 }
+.nav-container {
+	height: 50px;
+}
 .navbar-custom {
 	margin-bottom: 0;
 	background-color: #121d1f;
@@ -248,7 +251,7 @@ hr {
 }
 /* Portfolio Section */
 #portfolio {
-	padding: 80px 0;
+	padding: 80px 0 0 0;
 	background: #ffffff; /* Old browsers */
 	background: -moz-linear-gradient(top, #ffffff 0%, #f4f5f6 49%, #ffffff 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(49%, #f4f5f6), color-stop(100%, #ffffff)); /* Chrome,Safari4+ */
@@ -379,15 +382,33 @@ ol.type li a:hover {
 	padding: 5px;
 	color: #E87E04;
 }
+.project-description1 {
+	font-family: 'Anonymous Pro', monospace;
+	font-size: 34px;
+	margin: 100px auto 50px auto;
+    max-width: 1100px;
+    text-align: center;  
+    color: #939598;
+}
 .project-description {
-	font-size: 18px;
-	margin: 50px auto;
+	font-size: 20px;
+	margin: 50px auto 100px auto;
     max-width: 800px;
-    text-align: center;
+    text-align: center;  
+    line-height: 34px;
+}
+.project-description2 {
+	font-size: 20px;
+	margin: 100px auto 100px auto;
+    max-width: 800px;
+    text-align: center;  
 }
 .project-img {
 	height: auto;
 	max-width: 100%;
+}
+.twocolumn-img {
+	padding: 0;
 }
 /* Pretty Photo */
 .pp_expand {
