--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ hr {
 }
 .navbar-custom {
 	margin-bottom: 0;
-	background-color: #121d1f;
+	background: rgba(41, 40, 37, 0.96);
 	border-radius: 0px;
 	padding: 10px 0;
 }
@@ -395,20 +395,30 @@ ol.type li a:hover {
 .project-description1 {
 	font-family: 'Anonymous Pro', monospace;
 	font-size: 34px;
-	margin: 100px auto 50px auto;
+	margin: 100px auto 0px auto;
+    max-width: 1050px;
+    text-align: center;  
+    color: #939598;
+}
+
+.project-description3 {
+	font-family: 'Anonymous Pro', monospace;
+	font-size: 34px;
+	margin: 0px auto;
     max-width: 1100px;
     text-align: center;  
     color: #939598;
 }
+
 .project-description {
 	font-size: 20px;
-	margin: 50px auto 100px auto;
+	margin: 25px auto 100px auto;
     max-width: 800px;
     text-align: center;  
     line-height: 34px;
 }
 .project-description2 {
-	font-size: 20px;
+	font-size: 16px;
 	margin: 100px auto 100px auto;
     max-width: 800px;
     text-align: center;  
@@ -418,7 +428,8 @@ ol.type li a:hover {
 	max-width: 100%;
 }
 .twocolumn-img {
-	padding: 0;
+	padding: 25px;
+		background: #fff;
 }
 /* Other Works Section */
 #other-works {
